add the internal flag to switch linkedin internal features

--- a/web/conf/application.conf
+++ b/web/conf/application.conf
@@ -81,6 +81,7 @@ elasticsearch.flow.url = "$YOUR_FLOW_INDEX_URL"
 
 backend.service.url = "$YOUR_BACKEND_SERVICE_URL"
 
+linkedin.internal = true
 authentication.ldap.url = "$YOUR_LDAP_SERVER"
 authentication.ldap.context_factory_class = "com.sun.jndi.ldap.LdapCtxFactory"
 authentication.principal.domain = "$YOUR_LDAP_DOMAIN"
